// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE epCuXO sc-iNiQyp hurqNT"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE epCuXO sc-iNiQyp hurqNT"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 fzNfvM sc-laZMeE eCSrth sc-iNiQyp hurqNT"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE epCuXO sc-iNiQyp hurqNT"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE gXtaPH sc-iNiQyp hurqNT"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE epCuXO sc-iNiQyp hurqNT"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-laZMeE epCuXO sc-iNiQyp hurqNT"
      placeholder="Type something..."
    />
  </div>
</div>
`;
